Students Page Final

--- a/classes.html
+++ b/classes.html
@@ -42,7 +42,7 @@
         <div class="main-header">
             <div class="main-row">
                 <div class="main-header-title">
-                    Students
+                    Classes
                 </div>
                 <div class="main-header-assistive">
                     <div class="input-container">
@@ -53,10 +53,10 @@
                             <i class="fa fa-filter"></i>
                         </button>
                     </div>
-                    <button onclick=" window.open('./register_student.html','_blank')" class="btn"
+                    <!-- <button onclick=" window.open('./register_student.html','_blank')" class="btn"
                         style="background-color: #45E900;">
                         &#xf234; Register Student
-                    </button>
+                    </button> -->
                 </div>
 
                 <!-- <div class = "card">
@@ -78,7 +78,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Samina-Bibi.jpg">
                             </div>
                         </td>
                         <td>
@@ -110,7 +110,39 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                            </div>
+                        </td>
+                        <td>
+                            12345
+                        </td>
+                        <td>
+                            Samina Bibi
+                        </td>
+                        <td>
+                            45 years
+                        </td>
+                        <td>
+                            F
+                        </td>
+                        <td style="width:auto; padding:0">
+                            <div class="status_buttons" style="padding-bottom: 4px;">
+                                <i class="fa fa-circle" style="color:greenyellow"></i>
+                                <div class="more_options">
+                                    <button
+                                        onclick="openContextMenu(event, 'more_options', '#table-list-item-context-menu')"
+                                        class="mini-button" style="background-color: transparent;">
+                                        <i class="fa fa-angle-down"></i>
+                                    </button>
+                                </div>
+                            </div>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width:80px">
+                            <div class="image-cropper profile-button">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -142,7 +174,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -174,7 +206,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -206,7 +238,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -238,7 +270,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -270,7 +302,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -302,7 +334,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -334,7 +366,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -366,7 +398,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -398,7 +430,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -430,7 +462,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -462,39 +494,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
-                            </div>
-                        </td>
-                        <td>
-                            i180621
-                        </td>
-                        <td>
-                            Saad Bazaz
-                        </td>
-                        <td>
-                            21 years
-                        </td>
-                        <td>
-                            M
-                        </td>
-                        <td style="width:auto; padding:0">
-                            <div class="status_buttons" style="padding-bottom: 4px;">
-                                <i class="fa fa-circle" style="color:greenyellow"></i>
-                                <div class="more_options">
-                                    <button
-                                        onclick="openContextMenu(event, 'more_options', '#table-list-item-context-menu')"
-                                        class="mini-button" style="background-color: transparent;">
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </div>
-                            </div>
-
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="width:80px">
-                            <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
