--- a/register_student.html
+++ b/register_student.html
@@ -14,31 +14,31 @@
 </head>
 
 <body>
-    <div class="md-stepper-horizontal orange">
-        <div class="md-step active done" onclick="hello()" id="Step_1">
-          <div class="md-step-circle"><span>1</span></div>
-          <div class="md-step-title">Student</div>
-          <div class="md-step-bar-left"></div>
-          <div class="md-step-bar-right"></div>
+    <div class="stepper-horizontal orange">
+        <div class="step active done" onclick="hello()" id="Step_1">
+          <div class="step-circle"><span>1</span></div>
+          <div class="step-title">Student</div>
+          <div class="step-bar-left"></div>
+          <div class="step-bar-right"></div>
         </div>
-        <div class="md-step active done" onclick="hello()" id="Step_2">
-          <div class="md-step-circle"><span>2</span></div>
-          <div class="md-step-title">Parents</div>
-          <div class="md-step-bar-left"></div>
-          <div class="md-step-bar-right"></div>
+        <div class="step active done" onclick="hello()" id="Step_2">
+          <div class="step-circle"><span>2</span></div>
+          <div class="step-title">Parents</div>
+          <div class="step-bar-left"></div>
+          <div class="step-bar-right"></div>
         </div>
-        <div class="md-step active" onclick="hello()" id="Step_3">
-          <div class="md-step-circle"><span>3</span></div>
-          <div class="md-step-title">Guardian</div>
-          <div class="md-step-bar-left"></div>
-          <div class="md-step-bar-right"></div>
+        <div class="step active" onclick="hello()" id="Step_3">
+          <div class="step-circle"><span>3</span></div>
+          <div class="step-title">Guardian</div>
+          <div class="step-bar-left"></div>
+          <div class="step-bar-right"></div>
         </div>
-        <div class="md-step" id="Step_4">
-          <div class="md-step-circle"><span>4</span></div>
-          <div class="md-step-title">Employee Discount</div>
-          <div class="md-step-optional">Optional</div>
-          <div class="md-step-bar-left"></div>
-          <div class="md-step-bar-right"></div>
+        <div class="step" id="Step_4">
+          <div class="step-circle"><span>4</span></div>
+          <div class="step-title">Employee Discount</div>
+          <div class="step-optional">Optional</div>
+          <div class="step-bar-left"></div>
+          <div class="step-bar-right"></div>
         </div>
       </div>
     <div class="main-content-body" style="padding-top: 25px;">
