Parents + Classes Page Semi-Final

--- a/parents.html
+++ b/parents.html
@@ -48,20 +48,12 @@
                     <div class="input-container">
                         <i class="fa fa-search" style="margin-right: 10px;margin-top:5px"></i>
                         <input type="text" placeholder="Search" />
-                        <button onclick="openContextMenu(event, 'input-container', '#search-bar-context-menu')"
+                        <!-- <button onclick="openContextMenu(event, 'input-container', '#search-bar-context-menu')"
                             class="mini-button" style="background-color: transparent;">
                             <i class="fa fa-filter"></i>
-                        </button>
+                        </button> -->
                     </div>
-                    <!-- <button onclick=" window.open('./register_student.html','_blank')" class="btn"
-                        style="background-color: #45E900;">
-                        &#xf234; Register Student
-                    </button> -->
                 </div>
-
-                <!-- <div class = "card">
-                    <h1>خوش آمدید</h1>
-                </div> -->
             </div>
         </div>
 
